--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@vue/compiler-dom": "^3.3.8",
+    "axios": "^1.6.1",
     "element-plus": "^2.4.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
