--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vue/compiler-dom": "^3.3.8",
     "axios": "^1.6.1",
     "element-plus": "^2.4.2",
+    "laravel-echo": "^1.15.3",
+    "pusher-js": "^8.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
