--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.1",
     "element-plus": "^2.4.2",
     "laravel-echo": "^1.15.3",
+    "moment": "^2.29.4",
     "pusher-js": "^8.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
